--- a/browser/components/loop/test/mochitest/browser.ini
+++ b/browser/components/loop/test/mochitest/browser.ini
@@ -11,7 +11,7 @@ support-files =
 [browser_CardDavImporter.js]
 [browser_fxa_login.js]
 [browser_GoogleImporter.js]
-+skip-if = e10s
+skip-if = e10s
 [browser_loop_fxa_server.js]
 [browser_LoopContacts.js]
 [browser_mozLoop_appVersionInfo.js]
