--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -10254,7 +10254,7 @@
 
 - name: privacy.window.name.update.enabled
   type: bool
-  value: true
+  value: false
   mirror: always
 
 # By default, the network state isolation is not active when there is a proxy
