--- a/browser/installer/package-manifest.in
+++ b/browser/installer/package-manifest.in
@@ -245,6 +245,7 @@
 @RESPATH@/browser/chrome/icons/default/default64.png
 @RESPATH@/browser/chrome/icons/default/default128.png
 #endif
+@RESPATH@/browser/features/*
 
 ; Base Browser
 @RESPATH@/components/SecurityLevel.manifest
