--- a/browser/components/about/components.conf
+++ b/browser/components/about/components.conf
@@ -23,6 +23,7 @@ pages = [
     'robots',
     'sessionrestore',
     'tabcrashed',
+    'torconnect',
     'unloads',
     'welcome',
     'welcomeback',
