--- a/browser/components/search/extensions/ddg-onion/manifest.json
+++ b/browser/components/search/extensions/ddg-onion/manifest.json
@@ -18,8 +18,8 @@
   "chrome_settings_overrides": {
     "search_provider": {
       "name": "DuckDuckGoOnion",
-      "search_url": "https://3g2upl4pq6kufc4m.onion",
-      "search_form": "https://3g2upl4pq6kufc4m.onion/?q={searchTerms}",
+      "search_url": "https://duckduckgogg42xjoc72x3sjasowoarfbgcmvfimaftt6twagswzczad.onion",
+      "search_form": "https://duckduckgogg42xjoc72x3sjasowoarfbgcmvfimaftt6twagswzczad.onion/?q={searchTerms}",
       "search_url_get_params": "q={searchTerms}"
     }
   }
