--- a/browser/components/about/components.conf
+++ b/browser/components/about/components.conf
@@ -21,6 +21,7 @@ pages = [
     'restartrequired',
     'rights',
     'robots',
+    'rulesets',
     'sessionrestore',
     'tabcrashed',
     'torconnect',
