--- a/browser/components/about/components.conf
+++ b/browser/components/about/components.conf
@@ -14,6 +14,7 @@ pages = [
     'loginsimportreport',
     'firefoxview',
     'firefoxview-next',
+    'manual',
     'messagepreview',
     'newtab',
     'policies',
