--- a/browser/components/about/components.conf
+++ b/browser/components/about/components.conf
@@ -12,6 +12,7 @@ pages = [
     'home',
     'logins',
     'loginsimportreport',
+    'manual',
     'newtab',
     'policies',
     'preferences',
