--- a/tools/torbrowser/Makefile
+++ b/tools/torbrowser/Makefile
@@ -1,11 +1,30 @@
 .DEFAULT_GOAL := all
 
 # https://stackoverflow.com/questions/18136918/how-to-get-current-relative-directory-of-your-makefile
-mkfile_path := $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
+mkfile_path := "$(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))"
 
-DEV_ROOT = $(mkfile_path)/../..
-BINARIES = $(DEV_ROOT)/.binaries
-BUILD_OUTPUT = $(DEV_ROOT)/obj-x86_64-pc-linux-gnu
+DEV_ROOT = "$(mkfile_path)/../.."
+BINARIES = "$(DEV_ROOT)/.binaries"
+ARCHITECTURE = "$(shell uname -m)"
+
+# Correct the architecture naming for ARM to match what mozilla has
+ifeq ($(ARCHITECTURE), "arm64")
+  ARCHITECTURE = "aarch64"
+endif
+
+# Define build output path based on the platform.
+ifeq ("$(shell uname)", "Darwin")
+  BUILD_OUTPUT = "$(DEV_ROOT)/obj-$(ARCHITECTURE)-apple-darwin$(shell uname -r)"
+else
+  BUILD_OUTPUT = "$(DEV_ROOT)/obj-$(ARCHITECTURE)-pc-linux-gnu"
+endif
+
+# Define the run command based on the platform.
+ifeq ("$(shell uname)", "Darwin")
+  RUN_CMD := cd "$(BINARIES)/Tor Browser.app/Contents/MacOS/" && ./firefox
+else
+  RUN_CMD := "$(BINARIES)/dev/Browser/start-tor-browser" -v $(ARGS)
+endif
 
 config:
 	./config.sh $(DEV_ROOT)
@@ -34,7 +53,7 @@ fat-aar:
 all: build deploy
 
 run:
-	$(BINARIES)/dev/Browser/start-tor-browser -v $(ARGS)
+	$(RUN_CMD)
 
 jslint:
 	./jslint.sh $(DEV_ROOT) $(JS)
